feat: cambio desde vscode

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>¡Bienvenido a dpl.com! git v2</h1>
+    <p>Cambio realizado desde Visual Studio Code</p>
     <p>Esta es la página personal del usuario <strong>kevindiaz</strong>.</p>
     <p>El servidor web Apache está funcionando correctamente.</p>
 </body>
